@@ -1,3 +1,8 @@
+2004-04-14  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m-link-numbering.el (w3m-link-numbering-face): New face.
+	(w3m-link-numbering): Use it.
+
 2004-04-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m-link-numbering.el: New file.
